# Sherwood

./: .env.example  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: backtest.yml
config/: default.yaml  risk.yaml
docs/: api-reference.md  backtesting.md  execution.md  signals.md
scripts/: optimize.py  paper.py
src/sherwood/backtester/: engine.py  metrics.py
src/sherwood/core/: engine.py  portfolio.py  risk.py  universe.py
src/sherwood/data/: cache.py
src/sherwood/execution/: slippage.py
src/sherwood/monitoring/: __init__.py  metrics.py
src/sherwood/reporting/: tearsheet.py
src/sherwood/strategies/: __init__.py  base.py  earnings.py  mean_reversion.py  momentum.py  pairs.py
src/sherwood/utils/: __init__.py  logger.py
tests/: conftest.py  test_risk.py
