[project]
name = "sherwood"
version = "0.4.0"
description = "Institutional-grade algorithmic trading infrastructure"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "pydantic>=2.7",
    "structlog>=24.1",
    "redis>=5.0",
    "aiohttp>=3.9",
    "websockets>=12.0",
    "PyYAML>=6.0",
]

[project.scripts]
sherwood = "sherwood.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/sherwood"]
omit = ["*/tests/*", "*/__init__.py"]
